<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_faculty"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/til_department"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/et_surname">

        <AutoCompleteTextView
            android:id="@+id/txt_faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/faculty"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_department"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/til_lecturer"
        app:layout_constraintEnd_toEndOf="@+id/til_faculty"
        app:layout_constraintStart_toStartOf="@+id/til_faculty"
        app:layout_constraintTop_toBottomOf="@+id/til_faculty">

        <AutoCompleteTextView
            android:id="@+id/txt_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/department"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lecturer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/til_department"
        app:layout_constraintStart_toStartOf="@+id/til_department"
        app:layout_constraintTop_toBottomOf="@+id/til_department">

        <AutoCompleteTextView
            android:id="@+id/txt_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/lecturer"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blumine"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        app:layout_constraintBottom_toTopOf="@+id/til_faculty"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blumine"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        app:layout_constraintBottom_toTopOf="@+id/et_surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_female" />

    <EditText
        android:id="@+id/et_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blumine"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        app:layout_constraintBottom_toTopOf="@+id/rb_female"
        app:layout_constraintEnd_toStartOf="@+id/img_regenerate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/blumine"
        android:text="@string/male"
        android:textColor="@color/blumine"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rb_female"
        app:layout_constraintEnd_toStartOf="@+id/rb_female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rb_female" />

    <RadioButton
        android:id="@+id/rb_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/blumine"
        android:text="@string/female"
        android:textColor="@color/blumine"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rb_male"
        app:layout_constraintTop_toBottomOf="@+id/et_student_id" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_very_big"
        android:layout_marginEnd="@dimen/margin_very_big"
        android:text="@string/register"
        android:textColor="@color/twilight_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_lecturer" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/select_faculty"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/til_faculty"
        app:layout_constraintEnd_toStartOf="@+id/til_faculty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/til_faculty" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_department"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/til_department"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/til_department" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_lecturer"
        android:textAlignment="center"
        android:textColor="@color/blumine"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/til_lecturer"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/til_lecturer" />

    <ImageView
        android:id="@+id/img_regenerate"
        android:layout_width="@dimen/image_width"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_very_small"
        app:layout_constraintBottom_toBottomOf="@+id/et_student_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_student_id"
        app:layout_constraintTop_toTopOf="@+id/et_student_id"
        app:srcCompat="@drawable/ic_regenerate"
        app:tint="@color/blumine" />

</androidx.constraintlayout.widget.ConstraintLayout>